# vramgeist

./: .coverage  .coverage.DABEAST.20272.XBeEZkfx  .coverage.DABEAST.20272.XhwOgmux  .coverage.DABEAST.26124.XlNgFElx  .gitignore  CLAUDE.md  README.md  pyproject.toml  vramgeist.py
.claude/: settings.local.json
.github/: copilot-instructions.md
src/vramgeist/: __init__.py  _rich_fallback.py  calc.py  cli.py  config.py  config_persist.py  file_browser.py  gguf.py  hw.py  ui.py  validate.py
src/vramgeist/bench/: llama_bench.py
src/vramgeist/tui/: __init__.py  app.py  file_browser.py  options.py  simple_analysis.py  state.py
src/vramgeist/tui/views/: screen_main.py
tests/: test_bench_integration.py  test_bench_mock.py  test_calc.py  test_calc_extra.py  test_cli_extra.py  test_cli_no_args.py  test_gguf.py  test_gguf_deep.py  test_hw.py  test_hw_extra.py  test_hw_mocks.py  test_llama_bench.py  test_main.py  test_rich_fallback.py  test_rich_fallback_more.py  test_rich_reload.py  tmp_model.gguf
