[project]
name = "vramgeist"
version = "0.1.0"
description = "Calculate maximum safe context length for GGUF models based on available VRAM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=7.0.0",
    "rich>=14.1.0",
    "prompt_toolkit>=3.0,<4.0",
]

[project.scripts]
vramgeist = "vramgeist.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
